package com.challenge.pixabay.common

object TestTags {
    const val ImageCard = "ImageCard"
    const val SearchAppBarText = "SearchAppBarText"
    const val SearchAppBarClose = "SearchAppBarClose"
    const val SearchAppBarSearch = "SearchAppBarSearch"
    const val SearchFloatingActionButton = "SearchFloatingActionButton"
    const val DefaultAppBar = "DefaultAppBar"
}
